--- a/templates/components/sidemenu.html
+++ b/templates/components/sidemenu.html
@@ -37,7 +37,27 @@
         <span class="ml-2">Settings</span>
       </div>  
     </a>
-    {% include "app/experience_display.html" %}
+    <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100 cursor-pointer" 
+    data-bs-toggle="modal" data-bs-target="#exampleModal"
+    onclick="modalOpenBehaviour('experience-input-modal')" >
+      <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+      </svg>
+      <span class="ml-2">Add Experience</span>
+    </div> 
+    {% comment %} Todo: Add Pointer change on hover{% endcomment %}
+    <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100 cursor-pointer" 
+    data-bs-toggle="modal" data-bs-target="#exampleModal"
+    onclick="modalOpenBehaviour('desired_skill-input-modal')" >
+      <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+      </svg>
+      <span class="ml-2">Add Desired Skill</span>
+    </div> 
+    {% include "app/desired_skill_modal.html" %}
+    {% include "app/experience_form.html" %}
   </div>  
   <!-- the sidebar menu item -->
 </div>
