Update sidemenu appearance.

--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -6,7 +6,7 @@
 {% endblock headers %}
 
 {% block content %}
-<div class="grid grid-cols-12 h-full">
+<div class="grid grid-cols-12 h-[calc(100%_-_80px)]">
     {% include "components/sidemenu.html" %}
 
     <div id="treeContainer" class="col-span-10 h-full bg-background relative overflow-hidden">
