--- a/templates/app/profile.html
+++ b/templates/app/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="grid grid-cols-12 h-full">
+<div class="grid grid-cols-12 h-[calc(100%_-_80px)]">
 
   {% include "components/sidemenu.html" %}
 
