--- a/templates/components/sidemenu.html
+++ b/templates/components/sidemenu.html
@@ -1,82 +1,159 @@
 {% load static %}
 
+{% comment %} sidemenu wrapper spans two cols in grid {% endcomment %}
+<div class="col-span-2 h-full bg-darker-blue pl-5 pr-2">
 
-<!-- side card -->
-<div class="col-span-2 h-full bg-darker-blue">
-  <div class="mb-8 space-y-1.5">
-    <a href="{% url 'dashboard_page' %}">
-      <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z" />
-        </svg>
-        <span class="ml-2">Skill Tree</span>
-      </div>  
-    </a>
-    <a href="{% url 'summary_page' %}">
-      <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
-        </svg>
-        <span class="ml-2">All Projects</span>
-      </div>  
-    </a>
-    <a href="{% url 'profile_page' %}">
-      <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-        </svg>
-        <span class="ml-2">Profile</span>
-      </div>  
-    </a>
-    <a href="{% url 'settings_page' %}">
-      <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100">
-        <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-          <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-        </svg>
-        <span class="ml-2">Settings</span>
-      </div>  
-    </a>
-    <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100 cursor-pointer" 
-    data-bs-toggle="modal" data-bs-target="#exampleModal"
-    onclick="modalOpenBehaviour('experience-input-modal')" >
-      <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+  {% comment %} user part {% endcomment %}
+
+  <header class="flex items-center justify-between pt-10">
+    <div class="flex-1 grow shrink flex items-center">
+      <a href="{% url 'profile_page' %}">
+        <div class="w-14 h-14 rounded-full overflow-hidden bg-background">
+          <img src="{% static 'images/profile_picture_holder.jpg' %}" alt="User Profile Picture"
+            class="w-full h-full object-cover">
+        </div>
+      </a>
+      <div class="ml-2">
+        <p class="-mb-4">{{ request.user.username }}</p>
+        <span class="inline-block text-base opacity-50">{{ request.user.profile.first_name }}</span>
+        <span class="inline-block text-base opacity-50">{{ request.user.profile.last_name }}</span>
+      </div>
+    </div>
+    <a href="{% url 'logout' %}"
+      class="flex items-center bg-background px-3 py-2 rounded-xl cursor-pointer text-base font-normal">
+      <span class="pr-1">Logout</span>
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+        stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
       </svg>
-      <span class="ml-2">Add Experience</span>
-    </div> 
-    {% comment %} Todo: Add Pointer change on hover{% endcomment %}
-    <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100 cursor-pointer" 
-    data-bs-toggle="modal" data-bs-target="#exampleModal"
-    onclick="modalOpenBehaviour('desired_skill-input-modal')" >
-      <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-      </svg>
-      <span class="ml-2">Add Desired Skill</span>
-    </div> 
-    {% include "app/desired_skill_modal.html" %}
-    {% include "app/experience_form.html" %}
-    <a href="{% url 'manage_desired_skills_page' %}">
-      <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" />
+    </a>
+  </header>
+
+  {% comment %} nav part {% endcomment %}
+
+  <nav id="sidemenu_" class="mt-5">
+    <ul class="grid grid-cols-1 gap-3">
+      <li class="-ml-3">
+        <a href="{% url 'dashboard_page' %}"
+          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+            stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z" />
+          </svg>
+          <span class="ml-2">Skill Tree</span>
+        </a>
+      </li>
+      <li class="-ml-3">
+        <a href="{% url 'summary_page' %}"
+          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+            stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+          </svg>
+          <span class="ml-2">All Experiences</span>
+        </a>
+      </li>
+      <li class="-ml-3">
+        <a href="{% url 'profile_page' %}"
+          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+            stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+          </svg>
+          <span class="ml-2">Profile</span>
+        </a>
+      </li>
+      <li expandable-menu="true" class="-ml-3">
+        <a href="{% url 'settings_page' %}"
+          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background relative">
+          <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+            stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+          </svg>
+          <span class="ml-2">Settings</span>
+          {% comment %} down chevron {% endcomment %}
+          <svg xmlns="http://www.w3.org/2000/svg"
+          class="w-4 h-4 absolute right-3 top-1/2 -translate-y-1/2 select-none"
+          fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" data-expand-menu
+          data-expand-target="#settings_expandable_menu">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+        </svg>
+        </a>
+        {% comment %} sub menu {% endcomment %}
+        <ul id="settings_expandable_menu"
+        class="pl-6"
+        >
+          <li class="pl-3 border-l-2 border-solid border-l-gray-500">
+            <a href="{% url 'settings_page' %}#setting_personal_information" class="line-clamp-1 py-3 px-2 hover:bg-background transition-colors duration-150 rounded-xl font-normal">Personal Information</a>
+          </li>
+          <li class="pl-3 border-l-2 border-solid border-l-gray-500">
+            <a href="{% url 'settings_page' %}#setting_socials" class="line-clamp-1 py-3 px-2 hover:bg-background transition-colors duration-150 rounded-xl font-normal">Socials</a>
+          </li>
+        </ul>
+      </li>
+
+      {% comment %} desired skills {% endcomment %}
+      <li expandable-menu="true" class="-ml-3">
+        <a href="{% url 'manage_desired_skills_page' %}"
+          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background relative">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+          stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" />
         </svg>
         <span class="ml-2">Manage Desired Skills</span>
-      </div>  
-    </a>
-    <a href="{% url 'manage_experiences_page' %}">
-      <div class="flex space-x-2 p-4 items-center hover:bg-background transition-colors duration-200 hover:duration-100">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" />
+          {% comment %} down chevron {% endcomment %}
+          <svg xmlns="http://www.w3.org/2000/svg"
+          class="w-4 h-4 absolute right-3 top-1/2 -translate-y-1/2 select-none"
+          fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" data-expand-menu
+          data-expand-target="#settings_expandable_menu">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+        </svg>
+        </a>
+        {% comment %} submenu {% endcomment %}
+        <ul id="settings_expandable_menu"
+        class="pl-6"
+        >
+          <li class="pl-3 border-l-2 border-solid border-l-gray-500">
+            <span class="line-clamp-1 py-3 px-2 hover:bg-background transition-colors duration-150 rounded-xl font-normal text-[17px] leading-[15px] cursor-pointer" onclick="modalOpenBehaviour('desired_skill-input-modal')">Add Desired Skill</span>
+          </li>
+        </ul>
+      </li>
+
+      {% comment %} experiences {% endcomment %}
+      <li expandable-menu="true" class="-ml-3">
+        <a href="{% url 'manage_experiences_page' %}"
+          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background relative">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+          stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" />
         </svg>
         <span class="ml-2">Manage Experiences</span>
-      </div>  
-    </a>
-  </div>  
-  <!-- the sidebar menu item -->
+          {% comment %} down chevron {% endcomment %}
+          <svg xmlns="http://www.w3.org/2000/svg"
+          class="w-4 h-4 absolute right-3 top-1/2 -translate-y-1/2 select-none"
+          fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" data-expand-menu
+          data-expand-target="#settings_expandable_menu">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+        </svg>
+        </a>
+        {% comment %} submenu {% endcomment %}
+        <ul id="settings_expandable_menu"
+        class="pl-6"
+        >
+          <li class="pl-3 border-l-2 border-solid border-l-gray-500">
+            <span class="line-clamp-1 py-3 px-2 hover:bg-background transition-colors duration-150 rounded-xl font-normal text-[17px] leading-[15px] cursor-pointer" onclick="modalOpenBehaviour('experience-input-modal')">Add Experience</span>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
 </div>
-<!-- end of the sidebar menu item -->
-<!-- tech card  -->
-<!-- end of the tech card -->
+{% comment %} add script to expand/hide sub menus {% endcomment %}
