added script to control submenu

--- a/templates/components/sidemenu.html
+++ b/templates/components/sidemenu.html
@@ -32,7 +32,7 @@
 
   {% comment %} nav part {% endcomment %}
 
-  <nav id="sidemenu_" class="mt-5">
+  <nav id="sidemenu" class="mt-5">
     <ul class="grid grid-cols-1 gap-3">
       <li class="-ml-3">
         <a href="{% url 'dashboard_page' %}"
@@ -67,9 +67,9 @@
           <span class="ml-2">Profile</span>
         </a>
       </li>
-      <li expandable-menu="true" class="-ml-3">
+      <li data-expandable-menu="true" data-expandable-at="{% url 'settings_page' %}" data-expand-target="#settings_submenu" class="-ml-3">
         <a href="{% url 'settings_page' %}"
-          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background relative">
+          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background">
           <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
             stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round"
@@ -77,17 +77,10 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
           </svg>
           <span class="ml-2">Settings</span>
-          {% comment %} down chevron {% endcomment %}
-          <svg xmlns="http://www.w3.org/2000/svg"
-          class="w-4 h-4 absolute right-3 top-1/2 -translate-y-1/2 select-none"
-          fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" data-expand-menu
-          data-expand-target="#settings_expandable_menu">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-        </svg>
         </a>
         {% comment %} sub menu {% endcomment %}
-        <ul id="settings_expandable_menu"
-        class="pl-6"
+        <ul id="settings_submenu"
+        class="pl-6 hidden"
         >
           <li class="pl-3 border-l-2 border-solid border-l-gray-500">
             <a href="{% url 'settings_page' %}#setting_personal_information" class="line-clamp-1 py-3 px-2 hover:bg-background transition-colors duration-150 rounded-xl font-normal">Personal Information</a>
@@ -99,26 +92,19 @@
       </li>
 
       {% comment %} desired skills {% endcomment %}
-      <li expandable-menu="true" class="-ml-3">
+      <li data-expandable-menu="true" data-expandable-at="{% url 'manage_desired_skills_page' %}" data-expand-target="#managa_ds_submenu" class="-ml-3">
         <a href="{% url 'manage_desired_skills_page' %}"
-          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background relative">
+          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
           stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round"
             d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" />
         </svg>
         <span class="ml-2">Manage Desired Skills</span>
-          {% comment %} down chevron {% endcomment %}
-          <svg xmlns="http://www.w3.org/2000/svg"
-          class="w-4 h-4 absolute right-3 top-1/2 -translate-y-1/2 select-none"
-          fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" data-expand-menu
-          data-expand-target="#settings_expandable_menu">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-        </svg>
         </a>
         {% comment %} submenu {% endcomment %}
-        <ul id="settings_expandable_menu"
-        class="pl-6"
+        <ul id="managa_ds_submenu"
+        class="pl-6 hidden"
         >
           <li class="pl-3 border-l-2 border-solid border-l-gray-500">
             <span class="line-clamp-1 py-3 px-2 hover:bg-background transition-colors duration-150 rounded-xl font-normal text-[17px] leading-[15px] cursor-pointer" onclick="modalOpenBehaviour('desired_skill-input-modal')">Add Desired Skill</span>
@@ -127,26 +113,19 @@
       </li>
 
       {% comment %} experiences {% endcomment %}
-      <li expandable-menu="true" class="-ml-3">
+      <li data-expandable-menu="true" data-expandable-at="{% url 'manage_experiences_page' %}" data-expand-target="#manage_exp_submenu" class="-ml-3">
         <a href="{% url 'manage_experiences_page' %}"
-          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background relative">
+          class="py-3 pl-3 flex items-center font-normal transition-colors duration-150 rounded-xl hover:bg-background">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
           stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round"
             d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" />
         </svg>
         <span class="ml-2">Manage Experiences</span>
-          {% comment %} down chevron {% endcomment %}
-          <svg xmlns="http://www.w3.org/2000/svg"
-          class="w-4 h-4 absolute right-3 top-1/2 -translate-y-1/2 select-none"
-          fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" data-expand-menu
-          data-expand-target="#settings_expandable_menu">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-        </svg>
         </a>
         {% comment %} submenu {% endcomment %}
-        <ul id="settings_expandable_menu"
-        class="pl-6"
+        <ul id="manage_exp_submenu"
+        class="pl-6 hidden"
         >
           <li class="pl-3 border-l-2 border-solid border-l-gray-500">
             <span class="line-clamp-1 py-3 px-2 hover:bg-background transition-colors duration-150 rounded-xl font-normal text-[17px] leading-[15px] cursor-pointer" onclick="modalOpenBehaviour('experience-input-modal')">Add Experience</span>
@@ -156,4 +135,5 @@
     </ul>
   </nav>
 </div>
+<script src="{% static 'js/sidemenu_submenu.js' %}"></script>
 {% comment %} add script to expand/hide sub menus {% endcomment %}
