--- a/templates/app/setting.html
+++ b/templates/app/setting.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="grid grid-cols-12 h-[calc(100%_-_80px)]">
   {% include "components/sidemenu.html" %}
-  <div class="col-span-10 bg-background h-full overflow-y-auto">
+  <div class="col-span-10 bg-background h-full overflow-y-auto py-8">
     <div id="container" class="flex flex-col items-center justify-center">
       <div class="lg:space-y-6 text-center">
         <h3>Settings</h3>
