--- a/templates/app/manage_desired_skills.html
+++ b/templates/app/manage_desired_skills.html
@@ -81,5 +81,6 @@
     <input type="hidden" name="names" id="ddsf_names">
   </form>
 </div>
+{% include 'app/desired_skill_modal.html' %}
 <script src="{% static 'js/manage_ds.js' %}"></script>
 {% endblock %}
