--- a/templates/app/profile.html
+++ b/templates/app/profile.html
@@ -8,7 +8,7 @@
   <div class="col-span-10 bg-background h-full space-y-4 p-14">
       <div id="profile" class="flex items-center justify-center space-x-10">
         <div id="pic-container" class="w-52">
-          <img src="{{request.user.profile.image.url}}" alt="" class="w-full h-52 object-cover object-top rounded-full border-2">
+          <img src="{{request.user.profile.image.url}}" alt="" class="w-full h-52 object-cover object-top rounded-full border-2 bg-blue-50/80">
         </div>
         <div>
           <h3>{{request.user.username|title}}</h3>
