--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
     {% else %}
     <link rel="stylesheet" href="{% static 'css/tailwind.css' %}">
     {% endif %}
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     {% block headers %} 
     {% endblock headers %}
   </head>
@@ -32,6 +34,5 @@
     <script src={% static 'js/Modal.js' %}></script>
     <script src={%static '/js/project_list_descrption.js' %}></script>
     <script src={%static '/js/exp_display_modal.js' %}></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </body>
 </html>
