--- a/templates/components/node_side_bar.html
+++ b/templates/components/node_side_bar.html
@@ -6,6 +6,7 @@
       <img id="nsb_image" src="{% static 'images/svg/badge.svg' %}" alt="Icon" class="h-8 w-8">
       <h4 id="nsb_name" class="ml-2 text-[25px] overflow-x-auto whitespace-nowrap">Node Name</h4>
     </div>
+    {% if editable %}
     <div class="flex items-center">
       <svg id="nsb_save" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-success cursor-pointer hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
         <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
@@ -14,6 +15,7 @@
         <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
       </svg>
     </div>
+    {% endif %}
     <svg id="nsb_close" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 cursor-pointer text-gray-500 hover:text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
       <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
     </svg>
@@ -32,6 +34,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
         </svg>
         <!-- dropdown menu -->
+        {% if editable %}
         <div
           data-active="false"
           id="nsb_proficiency_menu"
@@ -89,6 +92,7 @@
             >Expert</li>
           </ul>
         </div>
+        {% endif %}
       </div>
     </div>
     <div class="w-full h-3 bg-[#3d488b] rounded-full overflow-hidden">
@@ -104,7 +108,8 @@
       <div class="flex justify-between items-center">
         <h4 class="mb-3 text-[25px]">Description</h4>
       </div>
-      <form id="nsb_description_form" action="{% url 'update_ds_description' %}" method="post">
+      {% if editable %}
+      <form id="nsb_description_form" action="{% url 'update_ds' %}" method="post">
         {% csrf_token %}
         <textarea 
           name="description" 
@@ -117,6 +122,17 @@
           readonly
           class="w-full bg-background p-4 rounded-lg max-h-72 resize-none outline-none focus-visible:outline-2 focus-visible:outline-white"></textarea>
       </form>
+      {% else %}
+        <textarea 
+        name="description" 
+        id="nsb_description"
+        autocomplete="false"
+        placeholder="Click the edit icon on the right to add a description!" 
+        maxlength="10000"
+        rows="30"
+        readonly
+        class="w-full bg-background p-4 rounded-lg max-h-72 resize-none outline-none focus-visible:outline-2 focus-visible:outline-white"></textarea>
+      {% endif %}
     </section>
     <section class="my-4">
       <div class="">
