--- a/templates/app/manage_experiences.html
+++ b/templates/app/manage_experiences.html
@@ -26,7 +26,7 @@
           Select and Delete
         </button>
         {% endif %}
-        <button class="button button-transition" id="add_exp">
+        <button class="button button-transition" id="add_exp" onclick="modalOpenBehaviour('experience-input-modal')">
           Add Experience
         </button>
       </div>
