--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,33 +1,69 @@
 {% load static %}
 
+
+
 <nav
-  class="{% if transparent %} bg-transparent {% else %} bg-foreground {% endif %} w-full h-20 {% if alternate %} fixed top-0 left-0 z-[2] {% endif %}  transition-all duration-200 z-50"
+  class="{% if transparent %} 
+  bg-transparent 
+  {% else %} 
+  bg-foreground 
+  {% endif %} 
+  w-full h-20 
+  {% if alternate %} 
+  fixed top-0 left-0 z-[2] 
+  {% endif %} 
+  transition-all duration-200 z-50
+  "
 >
   {%if alternate %}
-  <ul
-    class="flex justify-end items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none"
-  >
-    <li class="mx-10 cursor-pointer opacity-100">
-      {% include 'components/search_bar.html' %}
-    </li>
-    <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-      <a href="{% url 'landing_page' %}#how_it_works">How it Works</a>
-    </li>
-    <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-      <a href="{% url 'landing_page' %}#about_us">About Us</a>
-    </li>
-    <li class="mx-10 cursor-pointer">
-      <a href="{% url 'auth_page' %}"
-        ><button class="button bg-dark-gradient button-transition">
-          {% if user.is_authenticated %}
-            Dashboard
-          {% else %}
-            Log In
-          {% endif %}
-        </button></a
-      >
-    </li>
-  </ul>
+  <!-- this is where the media query comes in  -->
+  <div class="desktop:hidden h-auto my-auto">
+    <ul
+      class="flex justify-end items-center my-0 mx-auto w-11/12 h-20 text-rice-white list-none"
+    >
+      <li class="relative right-[33px] cursor-pointer opacity-100">
+        {% include 'components/search_bar.html' %}
+      </li>
+      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
+        <a href="{% url 'landing_page' %}#how_it_works">How it Works</a>
+      </li>
+      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
+        <a href="{% url 'landing_page' %}#about_us">About Us</a>
+      </li>
+      <li class="mx-10 cursor-pointer">
+        <a href="{% url 'auth_page' %}"
+          ><button class="button bg-dark-gradient button-transition">
+            {% if user.is_authenticated %}
+              Dashboard
+            {% else %}
+              Log In
+            {% endif %}
+          </button></a
+        >
+      </li>
+    </ul>
+  </div>
+
+  <!-- 1080px: change -->
+  <div class="relative bottom-40 desktop:bottom-0">
+    <ul class="flex justify-end items-center h-20 w-11/12 mx-auto">
+      <!-- desktop:block hidden flex justify-end items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none -->
+      <li class="mx-10 cursor-pointer">
+        <a href="{% url 'auth_page' %}">
+          <button class="button bg-dark-gradient button-transition">
+            {% if user.is_authenticated %}
+              Dashboard
+            {% else %}
+              Log In
+            {% endif %}
+          </button>
+        </a>
+      </li>
+      <li class="inline-block mx-10 cursor-pointer">
+        {% include 'icons/burger.html' with class='w-8 h-8 opacity-70 hover:opacity-100 rounded-full bg-dark-gradient '%}
+      </li>
+    </ul>
+  </div>
   {% else %}
   <!-- nav -->
   <!-- nav-container -->
