make the 'how it works' section responsive in the desktop view(1080px)

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -47,7 +47,7 @@
   <!-- 1080px: change -->
   <div class="relative bottom-40 desktop:bottom-0">
     <ul class="flex justify-between items-center h-20 w-11/12 mx-auto">
-      <li class="inline-block mx-10 ">
+      <li class="inline-block mx-10 button-transition">
         {% include 'icons/burger.html' with class='w-8 h-8 opacity-70 hover:opacity-100 '%}
       </li>
       <!-- include a logo here -->
