--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -336,6 +336,8 @@
   --main-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   /* font-size:  */
   /*****  End Of Typography ******/
+
+
 }
 
 /* 
@@ -447,4 +449,9 @@
   height: 80px; 
   visibility: hidden; 
   pointer-events: none;
+}
+
+img {
+  display:block;
+  max-width:100%;
 }
