--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -51,7 +51,7 @@
         {% include 'icons/burger.html' with class='w-8 h-8 opacity-70 hover:opacity-100 '%}
       </li>
       <!-- include a logo here -->
-      <li class="mr-10 cursor-pointer opacity-70 hover:opacity-100">
+      <li class="cursor-pointer opacity-70 hover:opacity-100">
         <a href="{% url 'landing_page' %}">
           {% include 'icons/mainlogo.html' with class="w-32 h-32"%}
         </a>
