--- a/templates/app/about_us_content.html
+++ b/templates/app/about_us_content.html
@@ -1,40 +1,38 @@
 {% load static %}
 <section id="about_us" class="w-full background h-screen pt-32">
-  <article class="w-1/2 m-auto">
-    <h2 class="text-[3rem] mb-[60px] ">About Us</h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum suspendisse lorem nunc vivamus egestas ut sed morbi. Eget sapien id iaculis senectus mattis nulla in felis mauris. Arcu aenean placerat donec ut nullam vel, facilisis. Montes, nisl, eget vitae, nisi tortor massa. Ut pharetra lacinia metus nunc turpis lectus pellentesque non. Proin varius porttitor mauris, malesuada amet vulputate.
-    </p>
-  </article>
-
-  <div class="grid grid-cols-2 w-1/2 m-auto mt-11">
-    <div class="flex items-center my-6">
-      <div class="w-[76px] h-[76px] rounded-[50%] overflow-hidden mx-6" >
-        <img src="{% static 'images/profile_picture_holder.jpg' %}" alt="profile picture" />
+  <div class="w-1/2 mx-auto desktop:w-[70%] tablet:!w-[80%]">
+    <!-- strange: w-80% couldn't override the w-70% at tablet viewpoint -->
+    <article>
+      <h2 class="text-[3rem] mb-[60px] ">About Us</h2>
+      <p class="text-justify">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum suspendisse lorem nunc vivamus egestas ut sed morbi. Eget sapien id iaculis senectus mattis nulla in felis mauris. Arcu aenean placerat donec ut nullam vel, facilisis. Montes, nisl, eget vitae, nisi tortor massa. Ut pharetra lacinia metus nunc turpis lectus pellentesque non. Proin varius porttitor mauris, malesuada amet vulputate.
+      </p>
+    </article>
+    <div class="grid grid-cols-2 mt-11">
+      <div class="flex items-center my-6 tablet:flex-col tablet:space-y-4">
+        <div class="w-[76px] h-[76px] rounded-[50%] overflow-hidden mx-6" >
+          <img src="{% static 'images/profile_picture_holder.jpg' %}" alt="profile picture" />
+        </div>
+        <span class="font-bold">Team Member X</span>
       </div>
-      <span class="font-bold">Team Member X</span>
-    </div>
-
-    <div class="flex items-center my-6">
-      <div class="w-[76px] h-[76px] rounded-[50%] overflow-hidden mx-6" >
-        <img src="{% static 'images/profile_picture_holder.jpg' %}" alt="profile picture" />
+      <div class="flex items-center my-6 tablet:flex-col tablet:space-y-4">
+        <div class="w-[76px] h-[76px] rounded-[50%] overflow-hidden mx-6" >
+          <img src="{% static 'images/profile_picture_holder.jpg' %}" alt="profile picture" />
+        </div>
+        <span class="font-bold">Team Member X</span>
       </div>
-      <span class="font-bold">Team Member X</span>
-    </div>
-
-    <div class="flex items-center my-6">
-      <div class="w-[76px] h-[76px] rounded-[50%] overflow-hidden mx-6" >
-        <img src="{% static 'images/profile_picture_holder.jpg' %}" alt="profile picture" />
+      <div class="flex items-center my-6 tablet:flex-col tablet:space-y-4">
+        <div class="w-[76px] h-[76px] rounded-[50%] overflow-hidden mx-6" >
+          <img src="{% static 'images/profile_picture_holder.jpg' %}" alt="profile picture" />
+        </div>
+        <span class="font-bold">Team Member X</span>
       </div>
-      <span class="font-bold">Team Member X</span>
-    </div>
-
-    <div class="flex items-center my-6">
-      <div class="w-[76px] h-[76px] rounded-[50%] overflow-hidden mx-6" >
-        <img src="{% static 'images/profile_picture_holder.jpg' %}" alt="profile picture" />
+      <div class="flex items-center my-6 tablet:flex-col tablet:space-y-4">
+        <div class="w-[76px] h-[76px] rounded-[50%] overflow-hidden mx-6" >
+          <img src="{% static 'images/profile_picture_holder.jpg' %}" alt="profile picture" />
+        </div>
+        <span class="font-bold">Team Member X</span>
       </div>
-      <span class="font-bold">Team Member X</span>
     </div>
-    
   </div>
 </section>
