--- a/templates/app/experience_display.html
+++ b/templates/app/experience_display.html
@@ -93,7 +93,7 @@ style="display: none">
                 class="link pt-[20px]">
                     <h4
                     class="text-slate-400 inline-block ">Project Link</h4>
-                    <h5  class="text-slate-400" id="modal-project-link"><a href="">https://linktoproject.me/</a></h5>
+                    <h5  class="text-slate-400" ><a href="" id="modal-project-link">https://linktoproject.me/</a></h5>
             </div>
         </div>
     </div>
